Update search functionality and styles

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -11,6 +11,8 @@
     "/prod/PORTAL/3_actualizacion_documento.html": "/prod/PORTAL/3_actualizacion_documento.html",
     "/prod/PORTAL/PORTAL/Frame 1151.png": "/prod/PORTAL/PORTAL/Frame 1151.png",
     "/prod/PORTAL/_contrasena.html": "/prod/PORTAL/_contrasena.html",
+    "/prod/PORTAL/busqueda_1.html": "/prod/PORTAL/busqueda_1.html",
+    "/prod/PORTAL/busqueda_2.html": "/prod/PORTAL/busqueda_2.html",
     "/prod/PORTAL/calendario.html": "/prod/PORTAL/calendario.html",
     "/prod/PORTAL/contrasena.html": "/prod/PORTAL/contrasena.html",
     "/prod/PORTAL/faq.html": "/prod/PORTAL/faq.html",
@@ -70,6 +72,7 @@
     "/prod/assets/images/PORTAL/tmp_header.png": "/prod/assets/images/PORTAL/tmp_header.png",
     "/prod/assets/images/PORTAL/tmp_servicio.png": "/prod/assets/images/PORTAL/tmp_servicio.png",
     "/prod/assets/images/PORTAL/top_calendario.webp": "/prod/assets/images/PORTAL/top_calendario.webp",
+    "/prod/assets/images/PORTAL/top_search_no.png": "/prod/assets/images/PORTAL/top_search_no.png",
     "/prod/assets/images/accionistas.png": "/prod/assets/images/accionistas.png",
     "/prod/assets/images/accionistas1.png": "/prod/assets/images/accionistas1.png",
     "/prod/assets/images/accionistas2.png": "/prod/assets/images/accionistas2.png",
@@ -214,6 +217,8 @@
     "/final/PORTAL/3_actualizacion_documento.html": "/final/PORTAL/3_actualizacion_documento.html",
     "/final/PORTAL/PORTAL/Frame 1151.png": "/final/PORTAL/PORTAL/Frame 1151.png",
     "/final/PORTAL/_contrasena.html": "/final/PORTAL/_contrasena.html",
+    "/final/PORTAL/busqueda_1.html": "/final/PORTAL/busqueda_1.html",
+    "/final/PORTAL/busqueda_2.html": "/final/PORTAL/busqueda_2.html",
     "/final/PORTAL/calendario.html": "/final/PORTAL/calendario.html",
     "/final/PORTAL/contrasena.html": "/final/PORTAL/contrasena.html",
     "/final/PORTAL/faq.html": "/final/PORTAL/faq.html",
@@ -273,6 +278,7 @@
     "/final/assets/images/PORTAL/tmp_header.png": "/final/assets/images/PORTAL/tmp_header.png",
     "/final/assets/images/PORTAL/tmp_servicio.png": "/final/assets/images/PORTAL/tmp_servicio.png",
     "/final/assets/images/PORTAL/top_calendario.webp": "/final/assets/images/PORTAL/top_calendario.webp",
+    "/final/assets/images/PORTAL/top_search_no.png": "/final/assets/images/PORTAL/top_search_no.png",
     "/final/assets/images/accionistas.png": "/final/assets/images/accionistas.png",
     "/final/assets/images/accionistas1.png": "/final/assets/images/accionistas1.png",
     "/final/assets/images/accionistas2.png": "/final/assets/images/accionistas2.png",
@@ -417,6 +423,8 @@
     "/qa/PORTAL/3_actualizacion_documento.html": "/qa/PORTAL/3_actualizacion_documento.html",
     "/qa/PORTAL/PORTAL/Frame 1151.png": "/qa/PORTAL/PORTAL/Frame 1151.png",
     "/qa/PORTAL/_contrasena.html": "/qa/PORTAL/_contrasena.html",
+    "/qa/PORTAL/busqueda_1.html": "/qa/PORTAL/busqueda_1.html",
+    "/qa/PORTAL/busqueda_2.html": "/qa/PORTAL/busqueda_2.html",
     "/qa/PORTAL/calendario.html": "/qa/PORTAL/calendario.html",
     "/qa/PORTAL/contrasena.html": "/qa/PORTAL/contrasena.html",
     "/qa/PORTAL/faq.html": "/qa/PORTAL/faq.html",
@@ -476,6 +484,7 @@
     "/qa/assets/images/PORTAL/tmp_header.png": "/qa/assets/images/PORTAL/tmp_header.png",
     "/qa/assets/images/PORTAL/tmp_servicio.png": "/qa/assets/images/PORTAL/tmp_servicio.png",
     "/qa/assets/images/PORTAL/top_calendario.webp": "/qa/assets/images/PORTAL/top_calendario.webp",
+    "/qa/assets/images/PORTAL/top_search_no.png": "/qa/assets/images/PORTAL/top_search_no.png",
     "/qa/assets/images/accionistas.png": "/qa/assets/images/accionistas.png",
     "/qa/assets/images/accionistas1.png": "/qa/assets/images/accionistas1.png",
     "/qa/assets/images/accionistas2.png": "/qa/assets/images/accionistas2.png",
