--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -43,7 +43,7 @@
     "/final/assets/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf": "/final/assets/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf",
     "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
     "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf": "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf",
-    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
+    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
     "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf": "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf",
     "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf": "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf",
     "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf": "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf",
@@ -168,6 +168,7 @@
     "/final/assets/images/top_aumento_mesada.jpg": "/final/assets/images/top_aumento_mesada.jpg",
     "/final/assets/images/top_aumento_mesada.webp": "/final/assets/images/top_aumento_mesada.webp",
     "/final/assets/images/top_calendario.webp": "/final/assets/images/top_calendario.webp",
+    "/final/assets/images/top_educacion_financiera.png": "/final/assets/images/top_educacion_financiera.png",
     "/final/assets/images/top_gestion_documentos.webp": "/final/assets/images/top_gestion_documentos.webp",
     "/final/assets/images/top_gobierno.webp": "/final/assets/images/top_gobierno.webp",
     "/final/assets/images/top_nuestra_empresa.png": "/final/assets/images/top_nuestra_empresa.png",
@@ -194,6 +195,7 @@
     "/final/blog/como-ahorrar-al-mercar/index.html": "/final/blog/como-ahorrar-al-mercar/index.html",
     "/final/calendario_pagos/index.html": "/final/calendario_pagos/index.html",
     "/final/consumidor_financiero/index.html": "/final/consumidor_financiero/index.html",
+    "/final/educacion_financiera/index.html": "/final/educacion_financiera/index.html",
     "/final/favicon.ico": "/final/favicon.ico",
     "/final/gestion_documentos/index.html": "/final/gestion_documentos/index.html",
     "/final/gobierno_corporativo/1_ppios.html": "/final/gobierno_corporativo/1_ppios.html",
