--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -43,7 +43,7 @@
     "/final/assets/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf": "/final/assets/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf",
     "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
     "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf": "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf",
-    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
+    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
     "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf": "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf",
     "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf": "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf",
     "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf": "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf",
@@ -143,6 +143,7 @@
     "/final/assets/images/img_seguro.png": "/final/assets/images/img_seguro.png",
     "/final/assets/images/img_sp_auxilio.webp": "/final/assets/images/img_sp_auxilio.webp",
     "/final/assets/images/img_sp_incapacidad.webp": "/final/assets/images/img_sp_incapacidad.webp",
+    "/final/assets/images/img_viva_seguro.webp": "/final/assets/images/img_viva_seguro.webp",
     "/final/assets/images/junta/junta-andres.png": "/final/assets/images/junta/junta-andres.png",
     "/final/assets/images/junta/junta-catalina.png": "/final/assets/images/junta/junta-catalina.png",
     "/final/assets/images/junta/junta-sebastian.png": "/final/assets/images/junta/junta-sebastian.png",
