--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -9,6 +9,7 @@
     "/final/PORTAL/2_certificados_pension.html": "/final/PORTAL/2_certificados_pension.html",
     "/final/PORTAL/3_actualizacion_contacto.html": "/final/PORTAL/3_actualizacion_contacto.html",
     "/final/PORTAL/3_actualizacion_documento.html": "/final/PORTAL/3_actualizacion_documento.html",
+    "/final/PORTAL/4_novedades_1.html": "/final/PORTAL/4_novedades_1.html",
     "/final/PORTAL/PORTAL/Frame 1151.png": "/final/PORTAL/PORTAL/Frame 1151.png",
     "/final/PORTAL/_contrasena.html": "/final/PORTAL/_contrasena.html",
     "/final/PORTAL/busqueda_1.html": "/final/PORTAL/busqueda_1.html",
@@ -45,7 +46,7 @@
     "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
     "/final/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf": "/final/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf",
     "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf": "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf",
-    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
+    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
     "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf": "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf",
     "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf": "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf",
     "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf": "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf",
