--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -43,9 +43,11 @@
     "/final/assets/documentos/Condiciones-Generales-Renta-Vitalicia-Inmediata.pdf": "/final/assets/documentos/Condiciones-Generales-Renta-Vitalicia-Inmediata.pdf",
     "/final/assets/documentos/Condiciones-Generales-Seguro-Previsional.pdf": "/final/assets/documentos/Condiciones-Generales-Seguro-Previsional.pdf",
     "/final/assets/documentos/Cronograma-pagos-de-mesada-a-pensionados-2023-Asulado.pdf": "/final/assets/documentos/Cronograma-pagos-de-mesada-a-pensionados-2023-Asulado.pdf",
+    "/final/assets/documentos/Estados_Financieros_y_revelaciones_diciembre_2023_Asulado.pdf": "/final/assets/documentos/Estados_Financieros_y_revelaciones_diciembre_2023_Asulado.pdf",
     "/final/assets/documentos/Estatutos-sociales-Asulado.pdf": "/final/assets/documentos/Estatutos-sociales-Asulado.pdf",
     "/final/assets/documentos/Financial Statements.pdf": "/final/assets/documentos/Financial Statements.pdf",
     "/final/assets/documentos/Grupo Sura Buen Gobierno.pdf": "/final/assets/documentos/Grupo Sura Buen Gobierno.pdf",
+    "/final/assets/documentos/Informe_de_gestion_ASULADO_2023.pdf": "/final/assets/documentos/Informe_de_gestion_ASULADO_2023.pdf",
     "/final/assets/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf": "/final/assets/documentos/LISTA-DOCUMENTAL-SUSTITUCION-PENSIONAL.pdf",
     "/final/assets/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf": "/final/assets/documentos/Politica-de-administracion-y-control-del-riesgo-de-laft-Asulado.pdf",
     "/final/assets/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf": "/final/assets/documentos/Politica-de-tratamiento-de-datos-personales-Asulado.pdf",
