Update CSS and HTML files, and add commented out code for table rendering

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -79,6 +79,7 @@
     "/final/assets/images/ILUS3.webp": "/final/assets/images/ILUS3.webp",
     "/final/assets/images/PORTAL/banner_home_1.png": "/final/assets/images/PORTAL/banner_home_1.png",
     "/final/assets/images/PORTAL/banner_portal_home_1.png": "/final/assets/images/PORTAL/banner_portal_home_1.png",
+    "/final/assets/images/PORTAL/colilla_pagos.png": "/final/assets/images/PORTAL/colilla_pagos.png",
     "/final/assets/images/PORTAL/tmp_articulo.jpg": "/final/assets/images/PORTAL/tmp_articulo.jpg",
     "/final/assets/images/PORTAL/tmp_header.png": "/final/assets/images/PORTAL/tmp_header.png",
     "/final/assets/images/PORTAL/tmp_servicio.png": "/final/assets/images/PORTAL/tmp_servicio.png",
