Fix CSS styles and update links in PORTAL pages

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -11,6 +11,7 @@
     "/final/PORTAL/3_actualizacion_contacto.html": "/final/PORTAL/3_actualizacion_contacto.html",
     "/final/PORTAL/3_actualizacion_documento.html": "/final/PORTAL/3_actualizacion_documento.html",
     "/final/PORTAL/4_novedades_1.html": "/final/PORTAL/4_novedades_1.html",
+    "/final/PORTAL/4_novedades_3_1.html": "/final/PORTAL/4_novedades_3_1.html",
     "/final/PORTAL/PORTAL/Frame 1151.png": "/final/PORTAL/PORTAL/Frame 1151.png",
     "/final/PORTAL/_contrasena.html": "/final/PORTAL/_contrasena.html",
     "/final/PORTAL/busqueda_1.html": "/final/PORTAL/busqueda_1.html",
@@ -77,9 +78,30 @@
     "/final/assets/images/ILUS1.webp": "/final/assets/images/ILUS1.webp",
     "/final/assets/images/ILUS2.webp": "/final/assets/images/ILUS2.webp",
     "/final/assets/images/ILUS3.webp": "/final/assets/images/ILUS3.webp",
+    "/final/assets/images/PORTAL/b1.png": "/final/assets/images/PORTAL/b1.png",
+    "/final/assets/images/PORTAL/b2.png": "/final/assets/images/PORTAL/b2.png",
+    "/final/assets/images/PORTAL/b3.png": "/final/assets/images/PORTAL/b3.png",
     "/final/assets/images/PORTAL/banner_home_1.png": "/final/assets/images/PORTAL/banner_home_1.png",
     "/final/assets/images/PORTAL/banner_portal_home_1.png": "/final/assets/images/PORTAL/banner_portal_home_1.png",
     "/final/assets/images/PORTAL/colilla_pagos.png": "/final/assets/images/PORTAL/colilla_pagos.png",
+    "/final/assets/images/PORTAL/home/ACTUALIZACION_01.webp": "/final/assets/images/PORTAL/home/ACTUALIZACION_01.webp",
+    "/final/assets/images/PORTAL/home/ACTUALIZACION_02.webp": "/final/assets/images/PORTAL/home/ACTUALIZACION_02.webp",
+    "/final/assets/images/PORTAL/home/CERTIFICADO_01.webp": "/final/assets/images/PORTAL/home/CERTIFICADO_01.webp",
+    "/final/assets/images/PORTAL/home/CERTIFICADO_02.webp": "/final/assets/images/PORTAL/home/CERTIFICADO_02.webp",
+    "/final/assets/images/PORTAL/home/CERTIFICADO_03.webp": "/final/assets/images/PORTAL/home/CERTIFICADO_03.webp",
+    "/final/assets/images/PORTAL/home/CERTIFICADO_04.webp": "/final/assets/images/PORTAL/home/CERTIFICADO_04.webp",
+    "/final/assets/images/PORTAL/home/ICONOS_BANNER_01.webp": "/final/assets/images/PORTAL/home/ICONOS_BANNER_01.webp",
+    "/final/assets/images/PORTAL/home/ICONOS_BANNER_02.webp": "/final/assets/images/PORTAL/home/ICONOS_BANNER_02.webp",
+    "/final/assets/images/PORTAL/home/ICONOS_BANNER_03.webp": "/final/assets/images/PORTAL/home/ICONOS_BANNER_03.webp",
+    "/final/assets/images/PORTAL/home/NOVEDADES_01.webp": "/final/assets/images/PORTAL/home/NOVEDADES_01.webp",
+    "/final/assets/images/PORTAL/home/NOVEDADES_02.webp": "/final/assets/images/PORTAL/home/NOVEDADES_02.webp",
+    "/final/assets/images/PORTAL/home/NOVEDADES_03.webp": "/final/assets/images/PORTAL/home/NOVEDADES_03.webp",
+    "/final/assets/images/PORTAL/home/NOVEDADES_04.webp": "/final/assets/images/PORTAL/home/NOVEDADES_04.webp",
+    "/final/assets/images/PORTAL/home/NOVEDADES_05.webp": "/final/assets/images/PORTAL/home/NOVEDADES_05.webp",
+    "/final/assets/images/PORTAL/home/NOVEDADES_06.webp": "/final/assets/images/PORTAL/home/NOVEDADES_06.webp",
+    "/final/assets/images/PORTAL/home/NOVEDADES_07.webp": "/final/assets/images/PORTAL/home/NOVEDADES_07.webp",
+    "/final/assets/images/PORTAL/home/SOLICITUDES_01.webp": "/final/assets/images/PORTAL/home/SOLICITUDES_01.webp",
+    "/final/assets/images/PORTAL/home/SOLICITUDES_02.webp": "/final/assets/images/PORTAL/home/SOLICITUDES_02.webp",
     "/final/assets/images/PORTAL/tmp_articulo.jpg": "/final/assets/images/PORTAL/tmp_articulo.jpg",
     "/final/assets/images/PORTAL/tmp_header.png": "/final/assets/images/PORTAL/tmp_header.png",
     "/final/assets/images/PORTAL/tmp_servicio.png": "/final/assets/images/PORTAL/tmp_servicio.png",
