Update links and filenames in PORTAL pages

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -11,6 +11,13 @@
     "/final/PORTAL/3_actualizacion_contacto.html": "/final/PORTAL/3_actualizacion_contacto.html",
     "/final/PORTAL/3_actualizacion_documento.html": "/final/PORTAL/3_actualizacion_documento.html",
     "/final/PORTAL/4_novedades_1.html": "/final/PORTAL/4_novedades_1.html",
+    "/final/PORTAL/4_novedades_1_1.html": "/final/PORTAL/4_novedades_1_1.html",
+    "/final/PORTAL/4_novedades_1_2.html": "/final/PORTAL/4_novedades_1_2.html",
+    "/final/PORTAL/4_novedades_1_3.html": "/final/PORTAL/4_novedades_1_3.html",
+    "/final/PORTAL/4_novedades_1_4.html": "/final/PORTAL/4_novedades_1_4.html",
+    "/final/PORTAL/4_novedades_2_1.html": "/final/PORTAL/4_novedades_2_1.html",
+    "/final/PORTAL/4_novedades_2_2.html": "/final/PORTAL/4_novedades_2_2.html",
+    "/final/PORTAL/4_novedades_2_3.html": "/final/PORTAL/4_novedades_2_3.html",
     "/final/PORTAL/4_novedades_3_1.html": "/final/PORTAL/4_novedades_3_1.html",
     "/final/PORTAL/PORTAL/Frame 1151.png": "/final/PORTAL/PORTAL/Frame 1151.png",
     "/final/PORTAL/_contrasena.html": "/final/PORTAL/_contrasena.html",
