--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -62,7 +62,7 @@
     "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
     "/final/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf": "/final/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf",
     "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf": "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf",
-    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
+    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
     "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf": "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf",
     "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf": "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf",
     "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf": "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf",
@@ -117,6 +117,7 @@
     "/final/assets/images/accionistas.png": "/final/assets/images/accionistas.png",
     "/final/assets/images/accionistas1.png": "/final/assets/images/accionistas1.png",
     "/final/assets/images/accionistas2.png": "/final/assets/images/accionistas2.png",
+    "/final/assets/images/accionistas_2024.png": "/final/assets/images/accionistas_2024.png",
     "/final/assets/images/altag/Alejandra Osorio.png": "/final/assets/images/altag/Alejandra Osorio.png",
     "/final/assets/images/altag/Diana Ramírez.png": "/final/assets/images/altag/Diana Ramírez.png",
     "/final/assets/images/altag/Gustavo Farrera.png": "/final/assets/images/altag/Gustavo Farrera.png",
@@ -155,6 +156,7 @@
     "/final/assets/images/blog/blog_3.webp": "/final/assets/images/blog/blog_3.webp",
     "/final/assets/images/blog/blog_4.jpg": "/final/assets/images/blog/blog_4.jpg",
     "/final/assets/images/blog/blog_4.webp": "/final/assets/images/blog/blog_4.webp",
+    "/final/assets/images/chart_2024.png": "/final/assets/images/chart_2024.png",
     "/final/assets/images/chart_accionistas.png": "/final/assets/images/chart_accionistas.png",
     "/final/assets/images/chat_bot.webp": "/final/assets/images/chat_bot.webp",
     "/final/assets/images/fase.png": "/final/assets/images/fase.png",
