--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -118,6 +118,7 @@
     "/final/assets/images/accionistas1.png": "/final/assets/images/accionistas1.png",
     "/final/assets/images/accionistas2.png": "/final/assets/images/accionistas2.png",
     "/final/assets/images/accionistas_2024.png": "/final/assets/images/accionistas_2024.png",
+    "/final/assets/images/accionistas_abril_2024.png": "/final/assets/images/accionistas_abril_2024.png",
     "/final/assets/images/altag/Alejandra Osorio.png": "/final/assets/images/altag/Alejandra Osorio.png",
     "/final/assets/images/altag/Diana Ramírez.png": "/final/assets/images/altag/Diana Ramírez.png",
     "/final/assets/images/altag/Gustavo Farrera.png": "/final/assets/images/altag/Gustavo Farrera.png",
