--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -62,7 +62,7 @@
     "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
     "/final/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf": "/final/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf",
     "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf": "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf",
-    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
+    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
     "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf": "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf",
     "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf": "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf",
     "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf": "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf",
@@ -97,9 +97,6 @@
     "/final/assets/images/PORTAL/home/CERTIFICADO_02.webp": "/final/assets/images/PORTAL/home/CERTIFICADO_02.webp",
     "/final/assets/images/PORTAL/home/CERTIFICADO_03.webp": "/final/assets/images/PORTAL/home/CERTIFICADO_03.webp",
     "/final/assets/images/PORTAL/home/CERTIFICADO_04.webp": "/final/assets/images/PORTAL/home/CERTIFICADO_04.webp",
-    "/final/assets/images/PORTAL/home/ICONOS_BANNER_01.webp": "/final/assets/images/PORTAL/home/ICONOS_BANNER_01.webp",
-    "/final/assets/images/PORTAL/home/ICONOS_BANNER_02.webp": "/final/assets/images/PORTAL/home/ICONOS_BANNER_02.webp",
-    "/final/assets/images/PORTAL/home/ICONOS_BANNER_03.webp": "/final/assets/images/PORTAL/home/ICONOS_BANNER_03.webp",
     "/final/assets/images/PORTAL/home/NOVEDADES_01.webp": "/final/assets/images/PORTAL/home/NOVEDADES_01.webp",
     "/final/assets/images/PORTAL/home/NOVEDADES_02.webp": "/final/assets/images/PORTAL/home/NOVEDADES_02.webp",
     "/final/assets/images/PORTAL/home/NOVEDADES_03.webp": "/final/assets/images/PORTAL/home/NOVEDADES_03.webp",
