Modal data in footer

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -85,6 +85,11 @@
     "/final/assets/images/ILUS1.webp": "/final/assets/images/ILUS1.webp",
     "/final/assets/images/ILUS2.webp": "/final/assets/images/ILUS2.webp",
     "/final/assets/images/ILUS3.webp": "/final/assets/images/ILUS3.webp",
+    "/final/assets/images/PORTAL/INTERNA_ACTUALIZACION.webp": "/final/assets/images/PORTAL/INTERNA_ACTUALIZACION.webp",
+    "/final/assets/images/PORTAL/INTERNA_CERTIFICADOS.webp": "/final/assets/images/PORTAL/INTERNA_CERTIFICADOS.webp",
+    "/final/assets/images/PORTAL/INTERNA_FAQ.webp": "/final/assets/images/PORTAL/INTERNA_FAQ.webp",
+    "/final/assets/images/PORTAL/INTERNA_NOVEDADES.webp": "/final/assets/images/PORTAL/INTERNA_NOVEDADES.webp",
+    "/final/assets/images/PORTAL/INTERNA_SOLICITUDES.webp": "/final/assets/images/PORTAL/INTERNA_SOLICITUDES.webp",
     "/final/assets/images/PORTAL/b1.png": "/final/assets/images/PORTAL/b1.png",
     "/final/assets/images/PORTAL/b2.png": "/final/assets/images/PORTAL/b2.png",
     "/final/assets/images/PORTAL/b3.png": "/final/assets/images/PORTAL/b3.png",
@@ -104,8 +109,10 @@
     "/final/assets/images/PORTAL/home/NOVEDADES_05.webp": "/final/assets/images/PORTAL/home/NOVEDADES_05.webp",
     "/final/assets/images/PORTAL/home/NOVEDADES_06.webp": "/final/assets/images/PORTAL/home/NOVEDADES_06.webp",
     "/final/assets/images/PORTAL/home/NOVEDADES_07.webp": "/final/assets/images/PORTAL/home/NOVEDADES_07.webp",
+    "/final/assets/images/PORTAL/home/NOVEDADES_08.webp": "/final/assets/images/PORTAL/home/NOVEDADES_08.webp",
     "/final/assets/images/PORTAL/home/SOLICITUDES_01.webp": "/final/assets/images/PORTAL/home/SOLICITUDES_01.webp",
     "/final/assets/images/PORTAL/home/SOLICITUDES_02.webp": "/final/assets/images/PORTAL/home/SOLICITUDES_02.webp",
+    "/final/assets/images/PORTAL/modal_su.png": "/final/assets/images/PORTAL/modal_su.png",
     "/final/assets/images/PORTAL/tmp_articulo.jpg": "/final/assets/images/PORTAL/tmp_articulo.jpg",
     "/final/assets/images/PORTAL/tmp_header.png": "/final/assets/images/PORTAL/tmp_header.png",
     "/final/assets/images/PORTAL/tmp_servicio.png": "/final/assets/images/PORTAL/tmp_servicio.png",
