Update image file name in faq.html and mix-manifest.json

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -89,6 +89,7 @@
     "/final/assets/images/PORTAL/INTERNA_CERTIFICADOS.webp": "/final/assets/images/PORTAL/INTERNA_CERTIFICADOS.webp",
     "/final/assets/images/PORTAL/INTERNA_FAQ.webp": "/final/assets/images/PORTAL/INTERNA_FAQ.webp",
     "/final/assets/images/PORTAL/INTERNA_NOVEDADES.webp": "/final/assets/images/PORTAL/INTERNA_NOVEDADES.webp",
+    "/final/assets/images/PORTAL/INTERNA_PREGUNTAS.webp": "/final/assets/images/PORTAL/INTERNA_PREGUNTAS.webp",
     "/final/assets/images/PORTAL/INTERNA_SOLICITUDES.webp": "/final/assets/images/PORTAL/INTERNA_SOLICITUDES.webp",
     "/final/assets/images/PORTAL/b1.png": "/final/assets/images/PORTAL/b1.png",
     "/final/assets/images/PORTAL/b2.png": "/final/assets/images/PORTAL/b2.png",
