--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -50,6 +50,7 @@
     "/final/assets/documentos/Codigo-de-etica-y-conducta-Asulado.pdf": "/final/assets/documentos/Codigo-de-etica-y-conducta-Asulado.pdf",
     "/final/assets/documentos/Condiciones-Generales-Renta-Vitalicia-Inmediata.pdf": "/final/assets/documentos/Condiciones-Generales-Renta-Vitalicia-Inmediata.pdf",
     "/final/assets/documentos/Condiciones-Generales-Seguro-Previsional.pdf": "/final/assets/documentos/Condiciones-Generales-Seguro-Previsional.pdf",
+    "/final/assets/documentos/Condiciones_Generales_Renta_Vitalicia_Inmediata_abril.pdf": "/final/assets/documentos/Condiciones_Generales_Renta_Vitalicia_Inmediata_abril.pdf",
     "/final/assets/documentos/Cronograma-pagos-de-mesada-a-pensionados-2023-Asulado.pdf": "/final/assets/documentos/Cronograma-pagos-de-mesada-a-pensionados-2023-Asulado.pdf",
     "/final/assets/documentos/Estados_Financieros_y_revelaciones_diciembre_2023_Asulado.pdf": "/final/assets/documentos/Estados_Financieros_y_revelaciones_diciembre_2023_Asulado.pdf",
     "/final/assets/documentos/Estatutos-sociales-Asulado.pdf": "/final/assets/documentos/Estatutos-sociales-Asulado.pdf",
@@ -62,7 +63,7 @@
     "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
     "/final/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf": "/final/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf",
     "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf": "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf",
-    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
+    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
     "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf": "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf",
     "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf": "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf",
     "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf": "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf",
