Update slider functionality and add new images in app.js and mix-manifest.json

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -120,6 +120,7 @@
     "/final/assets/images/PORTAL/home/NOVEDADES_08.webp": "/final/assets/images/PORTAL/home/NOVEDADES_08.webp",
     "/final/assets/images/PORTAL/home/SOLICITUDES_01.webp": "/final/assets/images/PORTAL/home/SOLICITUDES_01.webp",
     "/final/assets/images/PORTAL/home/SOLICITUDES_02.webp": "/final/assets/images/PORTAL/home/SOLICITUDES_02.webp",
+    "/final/assets/images/PORTAL/img_slider_1-img.png": "/final/assets/images/PORTAL/img_slider_1-img.png",
     "/final/assets/images/PORTAL/modal_su.png": "/final/assets/images/PORTAL/modal_su.png",
     "/final/assets/images/PORTAL/tmp_articulo.jpg": "/final/assets/images/PORTAL/tmp_articulo.jpg",
     "/final/assets/images/PORTAL/tmp_header.png": "/final/assets/images/PORTAL/tmp_header.png",
@@ -197,6 +198,9 @@
     "/final/assets/images/img_proposito.webp": "/final/assets/images/img_proposito.webp",
     "/final/assets/images/img_renta.png": "/final/assets/images/img_renta.png",
     "/final/assets/images/img_seguro.png": "/final/assets/images/img_seguro.png",
+    "/final/assets/images/img_slide_1_ciber.png": "/final/assets/images/img_slide_1_ciber.png",
+    "/final/assets/images/img_slide_2_ciber.png": "/final/assets/images/img_slide_2_ciber.png",
+    "/final/assets/images/img_slider_1-img.png": "/final/assets/images/img_slider_1-img.png",
     "/final/assets/images/img_sp_auxilio.webp": "/final/assets/images/img_sp_auxilio.webp",
     "/final/assets/images/img_sp_incapacidad.webp": "/final/assets/images/img_sp_incapacidad.webp",
     "/final/assets/images/img_viva_seguro.webp": "/final/assets/images/img_viva_seguro.webp",
@@ -251,6 +255,7 @@
     "/final/blog/5-consejos-para-aprovechar-el-seguro-previsional/index.html": "/final/blog/5-consejos-para-aprovechar-el-seguro-previsional/index.html",
     "/final/blog/como-ahorrar-al-mercar/index.html": "/final/blog/como-ahorrar-al-mercar/index.html",
     "/final/calendario_pagos/index.html": "/final/calendario_pagos/index.html",
+    "/final/ciberseguridad/index.html": "/final/ciberseguridad/index.html",
     "/final/consumidor_financiero/index.html": "/final/consumidor_financiero/index.html",
     "/final/educacion_financiera/index.html": "/final/educacion_financiera/index.html",
     "/final/favicon.ico": "/final/favicon.ico",
