--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -63,7 +63,7 @@
     "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
     "/final/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf": "/final/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf",
     "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf": "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf",
-    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
+    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
     "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf": "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf",
     "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf": "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf",
     "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf": "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf",
@@ -201,6 +201,10 @@
     "/final/assets/images/img_seguro.png": "/final/assets/images/img_seguro.png",
     "/final/assets/images/img_slide_1_ciber.png": "/final/assets/images/img_slide_1_ciber.png",
     "/final/assets/images/img_slide_2_ciber.png": "/final/assets/images/img_slide_2_ciber.png",
+    "/final/assets/images/img_slide_3_ciber.png": "/final/assets/images/img_slide_3_ciber.png",
+    "/final/assets/images/img_slide_4_ciber.png": "/final/assets/images/img_slide_4_ciber.png",
+    "/final/assets/images/img_slide_5_ciber.png": "/final/assets/images/img_slide_5_ciber.png",
+    "/final/assets/images/img_slide_6_ciber.png": "/final/assets/images/img_slide_6_ciber.png",
     "/final/assets/images/img_slider_1-img.png": "/final/assets/images/img_slider_1-img.png",
     "/final/assets/images/img_sp_auxilio.webp": "/final/assets/images/img_sp_auxilio.webp",
     "/final/assets/images/img_sp_incapacidad.webp": "/final/assets/images/img_sp_incapacidad.webp",
