--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -180,6 +180,9 @@
     "/final/assets/images/header_logo_w.svg": "/final/assets/images/header_logo_w.svg",
     "/final/assets/images/home_elements.svg": "/final/assets/images/home_elements.svg",
     "/final/assets/images/img-ciber-t1.png": "/final/assets/images/img-ciber-t1.png",
+    "/final/assets/images/img-ciber-t2.png": "/final/assets/images/img-ciber-t2.png",
+    "/final/assets/images/img-ciber-t3.png": "/final/assets/images/img-ciber-t3.png",
+    "/final/assets/images/img-ciber-t4.png": "/final/assets/images/img-ciber-t4.png",
     "/final/assets/images/img_anciana.webp": "/final/assets/images/img_anciana.webp",
     "/final/assets/images/img_atencion_1.png": "/final/assets/images/img_atencion_1.png",
     "/final/assets/images/img_atencion_2.png": "/final/assets/images/img_atencion_2.png",
@@ -236,6 +239,7 @@
     "/final/assets/images/top_aumento_mesada.jpg": "/final/assets/images/top_aumento_mesada.jpg",
     "/final/assets/images/top_aumento_mesada.webp": "/final/assets/images/top_aumento_mesada.webp",
     "/final/assets/images/top_calendario.webp": "/final/assets/images/top_calendario.webp",
+    "/final/assets/images/top_ciberseguridad.webp": "/final/assets/images/top_ciberseguridad.webp",
     "/final/assets/images/top_educacion_financiera.png": "/final/assets/images/top_educacion_financiera.png",
     "/final/assets/images/top_gestion_documentos.webp": "/final/assets/images/top_gestion_documentos.webp",
     "/final/assets/images/top_gobierno.webp": "/final/assets/images/top_gobierno.webp",
