Update file paths in mix-manifest.json and add new image img_guia_1.jpg

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -63,7 +63,7 @@
     "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
     "/final/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf": "/final/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf",
     "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf": "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf",
-    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
+    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
     "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf": "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf",
     "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf": "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf",
     "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf": "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf",
@@ -190,6 +190,7 @@
     "/final/assets/images/img_gestion.png": "/final/assets/images/img_gestion.png",
     "/final/assets/images/img_gestion.webp": "/final/assets/images/img_gestion.webp",
     "/final/assets/images/img_gestion2.webp": "/final/assets/images/img_gestion2.webp",
+    "/final/assets/images/img_guia_1.jpg": "/final/assets/images/img_guia_1.jpg",
     "/final/assets/images/img_ilus_renta_inv.webp": "/final/assets/images/img_ilus_renta_inv.webp",
     "/final/assets/images/img_ilus_renta_sob.webp": "/final/assets/images/img_ilus_renta_sob.webp",
     "/final/assets/images/img_nino.webp": "/final/assets/images/img_nino.webp",
@@ -263,6 +264,7 @@
     "/final/assets/js/portal.js": "/final/assets/js/portal.js",
     "/final/assets/js/portal.js.LICENSE.txt": "/final/assets/js/portal.js.LICENSE.txt",
     "/final/assets/sitemap.xml": "/final/assets/sitemap.xml",
+    "/final/asulado_te_guia/index.html": "/final/asulado_te_guia/index.html",
     "/final/blog/5-consejos-para-aprovechar-el-seguro-previsional/index.html": "/final/blog/5-consejos-para-aprovechar-el-seguro-previsional/index.html",
     "/final/blog/como-ahorrar-al-mercar/index.html": "/final/blog/como-ahorrar-al-mercar/index.html",
     "/final/calendario_pagos/index.html": "/final/calendario_pagos/index.html",
