--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -63,7 +63,7 @@
     "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
     "/final/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf": "/final/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf",
     "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf": "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf",
-    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
+    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
     "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf": "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf",
     "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf": "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf",
     "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf": "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf",
@@ -191,6 +191,9 @@
     "/final/assets/images/img_gestion.webp": "/final/assets/images/img_gestion.webp",
     "/final/assets/images/img_gestion2.webp": "/final/assets/images/img_gestion2.webp",
     "/final/assets/images/img_guia_1.jpg": "/final/assets/images/img_guia_1.jpg",
+    "/final/assets/images/img_guia_1.webp": "/final/assets/images/img_guia_1.webp",
+    "/final/assets/images/img_guia_2.webp": "/final/assets/images/img_guia_2.webp",
+    "/final/assets/images/img_guia_3.webp": "/final/assets/images/img_guia_3.webp",
     "/final/assets/images/img_ilus_renta_inv.webp": "/final/assets/images/img_ilus_renta_inv.webp",
     "/final/assets/images/img_ilus_renta_sob.webp": "/final/assets/images/img_ilus_renta_sob.webp",
     "/final/assets/images/img_nino.webp": "/final/assets/images/img_nino.webp",
