Asulado te guia update videos

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -180,6 +180,7 @@
     "/final/assets/images/header_logo.svg": "/final/assets/images/header_logo.svg",
     "/final/assets/images/header_logo_w.svg": "/final/assets/images/header_logo_w.svg",
     "/final/assets/images/home_elements.svg": "/final/assets/images/home_elements.svg",
+    "/final/assets/images/hqdefault.webp": "/final/assets/images/hqdefault.webp",
     "/final/assets/images/img-ciber-t1.png": "/final/assets/images/img-ciber-t1.png",
     "/final/assets/images/img-ciber-t2.png": "/final/assets/images/img-ciber-t2.png",
     "/final/assets/images/img-ciber-t3.png": "/final/assets/images/img-ciber-t3.png",
@@ -262,6 +263,11 @@
     "/final/assets/images/top_solicitudes.webp": "/final/assets/images/top_solicitudes.webp",
     "/final/assets/images/top_suscribete.png": "/final/assets/images/top_suscribete.png",
     "/final/assets/images/top_suscribete.webp": "/final/assets/images/top_suscribete.webp",
+    "/final/assets/images/video_thumb_1.jpg": "/final/assets/images/video_thumb_1.jpg",
+    "/final/assets/images/video_thumb_1.webp": "/final/assets/images/video_thumb_1.webp",
+    "/final/assets/images/video_thumb_2.webp": "/final/assets/images/video_thumb_2.webp",
+    "/final/assets/images/video_thumb_3.webp": "/final/assets/images/video_thumb_3.webp",
+    "/final/assets/images/video_thumb_youtube.png": "/final/assets/images/video_thumb_youtube.png",
     "/final/assets/images/vigilado.png": "/final/assets/images/vigilado.png",
     "/final/assets/images/vigilado_vert.png": "/final/assets/images/vigilado_vert.png",
     "/final/assets/js/app.js": "/final/assets/js/app.js",
