Add new HTML file for 404 error page and update login page styling

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -4,6 +4,7 @@
     "/dist/assets/css/portal.css": "/dist/assets/css/portal.css",
     "/dist/assets/css/app.css": "/dist/assets/css/app.css",
     "/dist/assets/css/forms.css": "/dist/assets/css/forms.css",
+    "/final/404.html": "/final/404.html",
     "/final/PORTAL/2_certificados_colilla.html": "/final/PORTAL/2_certificados_colilla.html",
     "/final/PORTAL/2_certificados_copia.html": "/final/PORTAL/2_certificados_copia.html",
     "/final/PORTAL/2_certificados_ingreso.html": "/final/PORTAL/2_certificados_ingreso.html",
