--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -179,6 +179,7 @@
     "/final/assets/images/chat_bot.webp": "/final/assets/images/chat_bot.webp",
     "/final/assets/images/fase.png": "/final/assets/images/fase.png",
     "/final/assets/images/fb.png": "/final/assets/images/fb.png",
+    "/final/assets/images/gobierno_corporativo_top.webp": "/final/assets/images/gobierno_corporativo_top.webp",
     "/final/assets/images/header_logo.svg": "/final/assets/images/header_logo.svg",
     "/final/assets/images/header_logo_w.svg": "/final/assets/images/header_logo_w.svg",
     "/final/assets/images/home_elements.svg": "/final/assets/images/home_elements.svg",
