Banner lusa home

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -234,6 +234,7 @@
     "/final/assets/images/logo_corner.png": "/final/assets/images/logo_corner.png",
     "/final/assets/images/logo_sura.png": "/final/assets/images/logo_sura.png",
     "/final/assets/images/logo_sura_2024.png": "/final/assets/images/logo_sura_2024.png",
+    "/final/assets/images/lusa_banner.webp": "/final/assets/images/lusa_banner.webp",
     "/final/assets/images/mano_paraque.png": "/final/assets/images/mano_paraque.png",
     "/final/assets/images/mano_paraque.webp": "/final/assets/images/mano_paraque.webp",
     "/final/assets/images/mano_porque.png": "/final/assets/images/mano_porque.png",
