--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -65,7 +65,7 @@
     "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
     "/final/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf": "/final/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf",
     "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf": "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf",
-    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
+    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
     "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf": "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf",
     "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf": "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf",
     "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf": "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf",
@@ -107,6 +107,7 @@
     "/final/assets/images/PORTAL/error_404.png": "/final/assets/images/PORTAL/error_404.png",
     "/final/assets/images/PORTAL/error_500.png": "/final/assets/images/PORTAL/error_500.png",
     "/final/assets/images/PORTAL/error_busqueda.png": "/final/assets/images/PORTAL/error_busqueda.png",
+    "/final/assets/images/PORTAL/error_mantenimiento.png": "/final/assets/images/PORTAL/error_mantenimiento.png",
     "/final/assets/images/PORTAL/error_saturado.png": "/final/assets/images/PORTAL/error_saturado.png",
     "/final/assets/images/PORTAL/home/ACTUALIZACION_01.webp": "/final/assets/images/PORTAL/home/ACTUALIZACION_01.webp",
     "/final/assets/images/PORTAL/home/ACTUALIZACION_02.webp": "/final/assets/images/PORTAL/home/ACTUALIZACION_02.webp",
