--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -65,7 +65,7 @@
     "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf": "/final/assets/documentos/Politica-para-la-gestion-del-riesgo-de-fraude-soborno-y-corrupcion-Asulado.pdf",
     "/final/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf": "/final/assets/documentos/Politica_de_tratamiento_de_datos_personales.pdf",
     "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf": "/final/assets/documentos/Presidente y Junta Directiva Informe.pdf",
-    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
+    "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf": "/final/assets/documentos/SGC-PO02 Nombramientos y Compensación Reglamento v2.pdf",
     "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf": "/final/assets/documentos/SGC-PO02 Reglamento Comité de Nombramientos y Compensación v2.pdf",
     "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf": "/final/assets/documentos/SGC-PO02_Reglamento_Comite_de_Nombramientos_y_Compensacion_v3.pdf",
     "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf": "/final/assets/documentos/SGC-PO03 Risk Investment Committee Regs v3.pdf",
@@ -178,7 +178,10 @@
     "/final/assets/images/chart_2024.png": "/final/assets/images/chart_2024.png",
     "/final/assets/images/chart_accionistas.png": "/final/assets/images/chart_accionistas.png",
     "/final/assets/images/chat_bot.webp": "/final/assets/images/chat_bot.webp",
+    "/final/assets/images/ciber/2.svg": "/final/assets/images/ciber/2.svg",
     "/final/assets/images/ciber/2_1.svg": "/final/assets/images/ciber/2_1.svg",
+    "/final/assets/images/ciber/2_2.svg": "/final/assets/images/ciber/2_2.svg",
+    "/final/assets/images/ciber/2_3.svg": "/final/assets/images/ciber/2_3.svg",
     "/final/assets/images/fase.png": "/final/assets/images/fase.png",
     "/final/assets/images/fb.png": "/final/assets/images/fb.png",
     "/final/assets/images/gobierno_corporativo_top.webp": "/final/assets/images/gobierno_corporativo_top.webp",
@@ -225,7 +228,11 @@
     "/final/assets/images/img_slider_1-img.png": "/final/assets/images/img_slider_1-img.png",
     "/final/assets/images/img_sp_auxilio.webp": "/final/assets/images/img_sp_auxilio.webp",
     "/final/assets/images/img_sp_incapacidad.webp": "/final/assets/images/img_sp_incapacidad.webp",
+    "/final/assets/images/img_tab1_ciber.webp": "/final/assets/images/img_tab1_ciber.webp",
     "/final/assets/images/img_tab2_ciber.webp": "/final/assets/images/img_tab2_ciber.webp",
+    "/final/assets/images/img_tab3_ciber.webp": "/final/assets/images/img_tab3_ciber.webp",
+    "/final/assets/images/img_tab4_ciber.webp": "/final/assets/images/img_tab4_ciber.webp",
+    "/final/assets/images/img_tab5_ciber.webp": "/final/assets/images/img_tab5_ciber.webp",
     "/final/assets/images/img_viva_seguro.webp": "/final/assets/images/img_viva_seguro.webp",
     "/final/assets/images/junta/junta-andres.png": "/final/assets/images/junta/junta-andres.png",
     "/final/assets/images/junta/junta-catalina.png": "/final/assets/images/junta/junta-catalina.png",
