--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -182,6 +182,7 @@
     "/final/assets/images/ciber/2_1.svg": "/final/assets/images/ciber/2_1.svg",
     "/final/assets/images/ciber/2_2.svg": "/final/assets/images/ciber/2_2.svg",
     "/final/assets/images/ciber/2_3.svg": "/final/assets/images/ciber/2_3.svg",
+    "/final/assets/images/ciber/2_4.svg": "/final/assets/images/ciber/2_4.svg",
     "/final/assets/images/fase.png": "/final/assets/images/fase.png",
     "/final/assets/images/fb.png": "/final/assets/images/fb.png",
     "/final/assets/images/gobierno_corporativo_top.webp": "/final/assets/images/gobierno_corporativo_top.webp",
