--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -260,6 +260,7 @@
     "/final/assets/images/svg_nino_mano.svg": "/final/assets/images/svg_nino_mano.svg",
     "/final/assets/images/svg_nino_mano.webp": "/final/assets/images/svg_nino_mano.webp",
     "/final/assets/images/tips-def.webp": "/final/assets/images/tips-def.webp",
+    "/final/assets/images/tips_img_1.webp": "/final/assets/images/tips_img_1.webp",
     "/final/assets/images/top_GC.webp": "/final/assets/images/top_GC.webp",
     "/final/assets/images/top_asulado_guia.webp": "/final/assets/images/top_asulado_guia.webp",
     "/final/assets/images/top_aumento_mesada.jpg": "/final/assets/images/top_aumento_mesada.jpg",
